# openai-batch-wrapper

./: LICENSE  README.md  pyproject.toml
src/openai_batch_wrapper/: __init__.py  batch_manager.py  batch_queue.py  cache_manager.py  provider_adapters.py  wrapper.py
src/openai_batch_wrapper/cli/: __init__.py  download.py  prepare.py  status.py  to_cache.py  upload.py
